WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
256612
Regression(
260812@main
): Hoyolab says phone is not in portrait even though it is
https://bugs.webkit.org/show_bug.cgi?id=256612
Summary
Regression(260812@main): Hoyolab says phone is not in portrait even though it is
Chris Dumez
Reported
2023-05-10 14:08:39 PDT
Hoyolab says phone is not in portrait even though it is since introduced the linked-on-after flag for the screen orientation API in
260812@main
.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2023-05-10 14:08:49 PDT
<
rdar://105743884
>
Chris Dumez
Comment 2
2023-05-10 14:11:56 PDT
<
rdar://106780607
>
Chris Dumez
Comment 3
2023-05-10 14:12:15 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/13719
EWS
Comment 4
2023-05-10 15:02:52 PDT
Committed
263932@main
(008fcfb52edb): <
https://commits.webkit.org/263932@main
> Reviewed commits have been landed. Closing PR #13719 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug