Regression(260812@main): Hoyolab says phone is not in portrait even though it is https://bugs.webkit.org/show_bug.cgi?id=256612 rdar://106780607

Reviewed by Geoffrey Garen.

I added a linked-on-after flag for the Screen Orientation API in 260812@main,
requiring apps to get rebuilt with the latest SDK in order to be able to use
the new API.

However, this broke the HoyoLab app, which now complains about the device
orientation even though it is correct. To address the issue, I am re-enabling
the screen orientation API for this app.

* Source/WebCore/platform/RuntimeApplicationChecks.h:
* Source/WebCore/platform/cocoa/RuntimeApplicationChecksCocoa.mm:
(WebCore::IOSApplication::isHoYoLAB):
* Source/WebKit/Shared/WebPreferencesDefaultValues.cpp:
(WebKit::defaultShouldEnableScreenOrientationAPI):

Canonical link: https://commits.webkit.org/263932@main